--- a/configs/gs201.radioactive.config.json
+++ b/configs/gs201.radioactive.config.json
@@ -9,7 +9,7 @@
           }, 
           "toolchains": [ 
             {  
-               "url": "https://github.com/ZyCromerZ/Clang/releases/download/19.0.0git-20240723-release/Clang-19.0.0git-20240723.tar.gz",  
+               "url": "https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master/clang-r522817.tar.gz",  
                "name": "clang",  
                "binaryEnv": [
                 "bin"
