--- a/configs/gs201.radioactive.config.json
+++ b/configs/gs201.radioactive.config.json
@@ -33,7 +33,7 @@
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size",
               "HOSTCC": "clang/bin/clang",
-              "HOSTCXX": "clang/bin/clang++"
+              "HOSTCXX": "clang/bin/clang++",
               "LLVM": "1",
               "LLVM_IAS": "1",
               "LTO": "thin" 
