--- a/configs/gs201.radioactive-weebxclang-19.config.json
+++ b/configs/gs201.radioactive-weebxclang-19.config.json
@@ -16,7 +16,7 @@
             ]  
             } 
           ], 
-          "enableCcache": true, 
+          "enableCcache": false, 
           "params": { 
             "ARCH": "arm64", 
             "CC": "clang/bin/clang",
