--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -35,9 +35,6 @@
               "OBJSIZE": "clang/bin/llvm-size",
               "HOSTCC": "clang/bin/clang",
               "HOSTCXX": "clang/bin/clang++",
-              "LLVM": "1",
-              "LLVM_IAS": "1",
-              "LTO": "full" 
             } 
           }, 
           "AnyKernel3": { 
@@ -48,9 +45,9 @@
               "branch": "15.0.0-sultan-gs201"
             }
           },
-          "enableKernelSU": false, 
+          "enableKernelSU": true, 
           "KernelSUSFS":{
-            "enable": false,
+            "enable": true,
             "branches": "gki-android13-5.10"
           },
           "enableLXC": false        
