--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -10,7 +10,7 @@
           },
           "toolchains": [ 
             {  
-               "url": "https://dl.google.com/android/repository/android-ndk-r28-linux.zip",  
+               "url": "https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master/clang-r522817.tar.gz",  
                "name": "clang",  
                "binaryEnv": [
                 "bin"
@@ -45,9 +45,9 @@
               "branch": "15.0.0-sultan-gs201"
             }
           },
-          "enableKernelSU": false, 
+          "enableKernelSU": true, 
           "KernelSUSFS":{
-            "enable": false,
+            "enable": true,
             "branches": "gki-android13-5.10"
           },
           "enableLXC": false        
