--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -378,17 +378,14 @@ jobs:
           make ${{ env.ARGS }} ${{ env.KERNEL_DEFCONFIG_PATH }}
           make ${{ env.ARGS }}
           # tree ${{ env.OUT_DIR }}
-
-      - name: 💛 Upload Image
-        uses: actions/upload-artifact@v4
+      
+      - name: 🔧 Concatenate DTBs
         env:
           ARCH: ${{ steps.generate-args.outputs.ARCH }}
-        with:
-          name: ${{ env.KERNEL_NAME }}-${{ env.BUILD_DATE }}-Image
-          path: ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image
-          if-no-files-found: ignore
-          retention-days: 7
-          
+          OUT_DIR: ${{ fromJSON(matrix.CONFIG.params).OUT_DIR }}
+        run: |
+          cat ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/dts/google/*.dtb > ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/dts/google/dtb
+
       - name: 💛 Upload Image.lz4
         uses: actions/upload-artifact@v4
         env:
@@ -396,26 +393,6 @@ jobs:
         with:
           name: ${{ env.KERNEL_NAME }}-${{ env.BUILD_DATE }}-Image.lz4
           path: ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.lz4
-          if-no-files-found: ignore
-          retention-days: 7
-
-      - name: 💙 Upload Image.gz
-        uses: actions/upload-artifact@v4
-        env:
-          ARCH: ${{ steps.generate-args.outputs.ARCH }}
-        with:
-          name: ${{ env.KERNEL_NAME }}-${{ env.BUILD_DATE }}-Image.gz
-          path: ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz
-          if-no-files-found: ignore
-          retention-days: 7
-
-      - name: 💙 Upload Image.gz-dtb
-        uses: actions/upload-artifact@v4
-        env:
-          ARCH: ${{ steps.generate-args.outputs.ARCH }}
-        with:
-          name: ${{ env.KERNEL_NAME }}-${{ env.BUILD_DATE }}-Image.gz-dtb
-          path: ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz-dtb
           if-no-files-found: ignore
           retention-days: 7
 
@@ -467,18 +444,10 @@ jobs:
           fi
 
 
-          if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz-dtb" ]; then
-            cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz-dtb ./AnyKernel3/
-          else
-            if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image" ]; then
-              cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image ./AnyKernel3/
-            fi
-            if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz" ]; then
-              cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz ./AnyKernel3/
-            fi
-            if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.lz4" ]; then
+          if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.lz4" ]; then
               cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.lz4 ./AnyKernel3/
             fi
+          else
             if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/dts/google/dtb" ]; then
               cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/dts/google/dtb ./AnyKernel3/
             fi
