--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -439,8 +439,8 @@ jobs:
             git clone --recursive --depth=1 -j $(nproc) --branch $ANYKERNEL_BRANCH $ANYKERNEL_REPO AnyKernel3
             echo "🤔 Use custom AnyKernel3 => ($ANYKERNEL_REPO)"
           else
-            git clone --recursive --depth=1 -j $(nproc) https://github.com/osm0sis/AnyKernel3 AnyKernel3
-            echo "🤔 Use origin Anykernel3 => (https://github.com/osm0sis/AnyKernel3)"
+            git clone --recursive --depth=1 -j $(nproc) https://github.com/EduardoA3677/AnyKernel3.git AnyKernel3
+            echo "🤔 Use origin Anykernel3 => (https://github.com/EduardoA3677/AnyKernel3.git)"
           fi
 
 
