--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -471,6 +471,7 @@ jobs:
       - name: 🧧 Create GitHub Release => (${{ env.BUILD_DATE }})
         env:
           ANYKERNEL3_FILE: "${{ env.WORKSPACE }}/AnyKernel3-${{ env.KERNEL_NAME }}-${{ env.BUILD_DATE }}"
+          token: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: true
         uses: softprops/action-gh-release@v2
         if: ${{ env.USE_ANYKERNEL3 == 'true' && env.CONFIRM_RELEASE == 'true' }}
