--- a/configs/gs201.radioactive-zyc-clang19.config.json
+++ b/configs/gs201.radioactive-zyc-clang19.config.json
@@ -3,7 +3,7 @@
         "kernelSource": { 
             "name": "Google-Pixel-7-Pro-Radioactive-zyc", 
             "repo": "https://github.com/EduardoA3677/RadioactiveKernel_Pantah.git", 
-            "branch": "a15", 
+            "branch": "a15-nksu", 
             "device": "gs201", 
             "defconfig": "radioactive_defconfig" 
           }, 
