--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -246,11 +246,7 @@ jobs:
 
           # Apply new KernelSU patchesnext
           curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -s next
-
-          echo -e "CONFIG_KPROBES=y" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_DEFCONFIG_PATH }}
-          echo -e "CONFIG_HAVE_KPROBES=y" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_DEFCONFIG_PATH }}
-          echo -e "CONFIG_KPROBE_EVENTS=y" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_DEFCONFIG_PATH }}
-
+          
           cat arch/${{ env.ARCH }}/configs/${{ env.KERNEL_DEFCONFIG_PATH }}
 
       - name: 😋 Setup KSU SUSFS
@@ -273,12 +269,6 @@ jobs:
           
           # Apply SUSFS patch for KernelSU
           patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
-          
-          # Apply makefile for ksu on Non-GKI
-          echo "Patch KSU makefile"
-          cp ../../kernel_patches/makefile-fix.patch ./
-          patch -p1 --forward < makefile-fix.patch || true
-
 
           # Change to common directory and apply SUSFS patch
           cd ..
@@ -296,6 +286,19 @@ jobs:
           # Apply Hide Stuff Patches
           cp ../kernel_patches/69_hide_stuff.patch ./
           patch -p1 -F 3 < 69_hide_stuff.patch || true
+          cp ../kernel_patches/ksu_hooks.patch ./
+          patch -p1 -F 3 < ksu_hooks.patch || true
+                    cp ../kernel_patches/sys.c_fix.patch ./
+          patch -p1 --fuzz=3 < ./sys.c_fix.patch
+                    cp ../kernel_patches/mount.h_fix.patch ./
+          patch -p1 -F 3 < ./mount.h_fix.patch || true
+                    cp ../kernel_patches/sched.h_fix.patch ./
+          patch -p1 -F 3 < ./sched.h_fix.patch || true
+                    cp ../kernel_patches/user.h_fix.patch ./
+          patch -p1 -F 3 < ./user.h_fix.patch || true
+
+          sed -i "s/poofed_size: '%u'/poofed_size: '%llu'/g" ./fs/susfs.c
+          sed -i "s/length of string: %u/length of string: %lu/g" ./fs/susfs.c
           
           # Add SUSFS configuration settings
           echo "Adding configuration settings to defconfig..."
