--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -276,8 +276,8 @@ jobs:
 
           # TODO: ADD SUSFS NEXT (FIX)
           echo "Applying next SUSFS patches..."
-          cp ../kernel_patches/apk_sign.c_fix.patch ./
-          patch -p1 -F 3 < apk_sign.c_fix.patch
+          # cp ../kernel_patches/apk_sign.c_fix.patch ./
+          # patch -p1 -F 3 < apk_sign.c_fix.patch
           # cp ../kernel_patches/core_hook.c_fix.patch ./
           # patch -p1 --fuzz=3 < core_hook.c_fix.patch
           # cp ../kernel_patches/selinux.c_fix.patch ./
