--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -5,7 +5,10 @@
             "name": "Google-Pixel-7-Pro-Radioactive-aosp", 
             "repo": "https://github.com/EduardoA3677/RadioactiveKernel_Pantah.git", 
             "branch": "a15-nksu", 
-            "device": "gs201", 
+            "device": "gs201",
+            "clangname": "AOSP",
+            "kernelname": "RadioActive",
+            "androidversion": "A15",
             "defconfig": "radioactive_defconfig" 
           },
           "toolchains": [ 
