--- a/configs/gs201.radioactive-weebxclang-19.config.json
+++ b/configs/gs201.radioactive-weebxclang-19.config.json
@@ -3,8 +3,11 @@
         "kernelSource": { 
             "name": "Google-Pixel-7-Pro-Radioactive-WeebX", 
             "repo": "https://github.com/EduardoA3677/RadioactiveKernel_Pantah.git", 
-            "branch": "a15-nksu", 
-            "device": "gs201", 
+            "branch": "a15-nksu",
+            "device": "gs201",
+            "clangname": "WeebX",
+            "kernelname": "RadioActive",
+            "androidversion": "A15",
             "defconfig": "radioactive_defconfig" 
           }, 
           "toolchains": [ 
