--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -248,7 +248,7 @@ jobs:
           fi
 
           # Apply new KernelSU patchesnext
-          curl -LSs "https://raw.githubusercontent.com/EduardoA3677/KernelSU-Next/next/kernel/setup.sh" | bash -s next
+          curl -LSs "https://raw.githubusercontent.com/EduardoA3677/KernelSU-Next/next/kernel/setup.sh" | bash -s a15-susfs
           
           cat arch/${{ env.ARCH }}/configs/${{ env.KERNEL_DEFCONFIG_PATH }}
 
