--- a/configs/gs201.radioactive-zyc-clang19.config.json
+++ b/configs/gs201.radioactive-zyc-clang19.config.json
@@ -3,7 +3,7 @@
         "kernelSource": { 
             "name": "Google-Pixel-7-Pro-Radioactive-zyc", 
             "repo": "https://github.com/EduardoA3677/RadioactiveKernel_Pantah.git", 
-            "branch": "a15-nksu", 
+            "branch": "a15-susfsnext", 
             "device": "gs201",
             "clangname": "ZyC",
             "kernelname": "RadioActive",
@@ -50,9 +50,9 @@
               "branch": "15.0.0-sultan-gs201"
             }
           },
-          "enableKernelSU": true, 
+          "enableKernelSU": false, 
           "KernelSUSFS":{
-            "enable": true,
+            "enable": false,
             "branches": "gki-android13-5.10"
           },
           "enableLXC": false        
