--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -429,7 +429,7 @@ jobs:
         env:
           PARAMS: "${{ toJSON(matrix.CONFIG.AnyKernel3) }}"
           ARCH: ${{ steps.generate-args.outputs.ARCH }}
-          ANYKERNEL3_FILE: "${{ env.WORKSPACE }}/${{ env.KERNEL_KERNELNAME }}-${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_CLANGNAME }}${{ env.KERNEL_ANDROIDVERSION }}-${{ env.BUILD_DATE }}"
+          ANYKERNEL3_FILE: "${{ env.WORKSPACE }}/${{ env.KERNEL_KERNELNAME }}-${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_CLANGNAME }}-${{ env.KERNEL_ANDROIDVERSION }}-${{ env.BUILD_DATE }}"
         run: |
           if echo -n '${{ env.PARAMS }}' | jq -e 'has("custom")' > /dev/null; then
             CUSTOM_ANYKERNEL3=$(echo -n '${{ env.PARAMS }}' | jq -r ".custom")
@@ -468,7 +468,7 @@ jobs:
 
       - name: "💾 Upload AnyKernel3 image => (${{ env.BUILD_DATE }})"
         env:
-          ANYKERNEL3_FILE: "${{ env.KERNEL_KERNELNAME }}-${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_CLANGNAME }}${{ env.KERNEL_ANDROIDVERSION }}-${{ env.BUILD_DATE }}"
+          ANYKERNEL3_FILE: "${{ env.KERNEL_KERNELNAME }}-${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_CLANGNAME }}-${{ env.KERNEL_ANDROIDVERSION }}-${{ env.BUILD_DATE }}"
         uses: actions/upload-artifact@v4
         if: ${{ env.USE_ANYKERNEL3 == 'true' }}
         with:
@@ -477,7 +477,7 @@ jobs:
 
       - name: 🧧 Create GitHub Release => (${{ env.BUILD_DATE }})
         env:
-          ANYKERNEL3_FILE: "${{ env.WORKSPACE }}/${{ env.KERNEL_KERNELNAME }}-${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_CLANGNAME }}${{ env.KERNEL_ANDROIDVERSION }}-${{ env.BUILD_DATE }}"
+          ANYKERNEL3_FILE: "${{ env.WORKSPACE }}/${{ env.KERNEL_KERNELNAME }}-${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_CLANGNAME }}-${{ env.KERNEL_ANDROIDVERSION }}-${{ env.BUILD_DATE }}"
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO_OWNER: EduardoA3677
           REPO_NAME: Kernel-Builder-Next
