--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -20,7 +20,7 @@
             ]  
             } 
           ], 
-          "enableCcache": false, 
+          "enableCcache": true, 
           "params": { 
             "ARCH": "arm64", 
             "CC": "clang/bin/clang",
