--- a/configs/gs201.radioactive-zyc-clang19.config.json
+++ b/configs/gs201.radioactive-zyc-clang19.config.json
@@ -19,7 +19,7 @@
             ]  
             } 
           ], 
-          "enableCcache": false, 
+          "enableCcache": true, 
           "params": { 
             "ARCH": "arm64", 
             "CC": "clang/bin/clang",
