--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -51,9 +51,9 @@
               "branch": "15.0.0-sultan-gs201"
             }
           },
-          "enableKernelSU": false, 
+          "enableKernelSU": true, 
           "KernelSUSFS":{
-            "enable": false,
+            "enable": true,
             "branches": "gki-android13-5.10"
           },
           "enableLXC": false        
