--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -56,6 +56,6 @@
             "enable": false,
             "branches": "gki-android13-5.10"
           },
-          "enableLXC": false        
+          "enableLXC": true        
     }
 ]
