--- a/configs/gs201.radioactive-weebxclang-19.config.json
+++ b/configs/gs201.radioactive-weebxclang-19.config.json
@@ -55,6 +55,6 @@
             "enable": false,
             "branches": "gki-android13-5.10"
           },
-          "enableLXC": false        
+          "enableLXC": true        
     }
 ]
