--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -4,7 +4,7 @@
         "kernelSource": { 
             "name": "Google-Pixel-7-Pro-Radioactive-aosp", 
             "repo": "https://github.com/EduardoA3677/RadioactiveKernel_Pantah.git", 
-            "branch": "a15-susfsnext", 
+            "branch": "net", 
             "device": "gs201",
             "clangname": "AOSP",
             "kernelname": "Radioactive",
