--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -4,7 +4,7 @@
         "kernelSource": { 
             "name": "Google-Pixel-7-Pro-Radioactive-aosp", 
             "repo": "https://github.com/EduardoA3677/RadioactiveKernel_Pantah.git", 
-            "branch": "net", 
+            "branch": "a15-susfsnext", 
             "device": "gs201",
             "clangname": "AOSP",
             "kernelname": "Radioactive",
@@ -18,29 +18,41 @@
                "binaryEnv": [
                 "bin"
             ]  
-            } 
+            },
+          {
+            "url": "https://github.com/mvaisakh/gcc-build/releases/download/31032024/eva-gcc-arm64-31032024.xz",
+            "name": "gcc64",
+            "binaryEnv": [
+                "bin"
+            ]
+          }
           ], 
-          "enableCcache": true, 
+          "enableCcache": false, 
           "params": { 
             "ARCH": "arm64", 
+            "SUBARCH": "arm64",
             "CC": "clang/bin/clang",
             "CXX": "clang/bin/clang++",
+            "CLANG_TRIPLE": "aarch64-linux-gnu-",
+            "LLVM": "1",
+            "LLVM_IAS": "1",
+            "LTO": "thin",
+            "CC_COMPAT": "",
             "externalCommands": { 
-              "CROSS_COMPILE": "aarch64-linux-gnu-", 
-              "AS": "clang/bin/llvm-as", 
-              "AR": "clang/bin/llvm-ar",  
-              "NM": "clang/bin/llvm-nm" ,  
-              "OBJCOPY": "clang/bin/llvm-objcopy",  
-              "OBJDUMP": "clang/bin/llvm-objdump",  
-              "STRIP": "clang/bin/llvm-strip",  
+              "CROSS_COMPILE": "gcc/bin/aarch64-linux-gnu-",
+              "AS": "clang/bin/llvm-as",
+              "AR": "clang/bin/llvm-ar",
+              "NM": "clang/bin/llvm-nm",
+              "OBJCOPY": "clang/bin/llvm-objcopy",
+              "OBJDUMP": "clang/bin/llvm-objdump",
+              "STRIP": "clang/bin/llvm-strip",
               "LD": "clang/bin/ld.lld",
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size",
-              "HOSTCC": "clang/bin/clang",
-              "HOSTCXX": "clang/bin/clang++",
-              "LLVM": "1",
-              "LLVM_IAS": "1",
-              "LTO": "full" 
+              "HOSTCC": "gcc/bin/gcc",
+              "HOSTCXX": "gcc/bin/g++",
+              "HOSTAR": "clang/bin/llvm-ar",
+              "HOSTLD": "clang/bin/ld.lld"
             } 
           }, 
           "AnyKernel3": { 
